# qtlogger

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  FEATURES.md  LICENSE  README.md  qtlogger.h  qtlogger.pro  qtlogger_link.pri
doc/: ARCHITECTURE.md  CHANGELOG.md  FEATURES.md  advanced.md  architecture.md  configuration.md  qtlogger.conf.example
doc/api/: attributes.md  core.md  formatters.md  index.md  pipelines.md  sinks.md
docs/: CHANGELOG.md  configuration.md  getting_started.md  index.md  qtlogger.conf.example
docs/api/: attributes.md  filters.md  index.md  pipelines.md
examples/: CMakeLists.txt  examples.pro
examples/colored_output/: CMakeLists.txt  main.cpp
examples/config_from_file/: CMakeLists.txt  config.ini  config_from_file.pro  main.cpp
examples/demo_showcase/: CMakeLists.txt  main.cpp
examples/file_rotation/: CMakeLists.txt  file_rotation.pro  main.cpp
examples/one_line_config/: CMakeLists.txt  main.cpp  one_line_config.pro
examples/pattern_formatter/: CMakeLists.txt  main.cpp  pattern_formatter.pro
examples/sentry_example/: CMakeLists.txt  main.cpp  sentry_example.pro
examples/simple/: CMakeLists.txt  main.cpp  simple.pro
examples/simple_config/: CMakeLists.txt  main.cpp  simple_config.pro
src/: src.pro
src/qtlogger/: CMakeLists.txt  abstractmessagefilter.h  abstractmessageformatter.h  abstractmessageprocessor.h  abstractmessagesink.h  attrhandler.h  configure.cpp  configure.h  debugmessage.cpp  debugmessage.h  filter.h  formatter.h  functionhandler.h  handler.h  logger.cpp  logger.h  logger_global.h  logmessage.h  messagehandler.cpp  messagehandler.h  messagepatterns.h  ownthreadhandler.h  ownthreadpipeline.cpp  ownthreadpipeline.h  pipeline.cpp  pipeline.h  pipelinehandler.cpp  pipelinehandler.h  qtlogger.h  qtlogger.pri  qtlogger.pro  sentry.h  setmessagepattern.cpp  setmessagepattern.h  simplepipeline.cpp  simplepipeline.h  sink.h  sortedpipeline.cpp  sortedpipeline.h  typedpipeline.cpp  (+4 more)
src/qtlogger/attrhandlers/: appinfoattrs.cpp  appinfoattrs.h  appuuidattr.cpp  appuuidattr.h  functionattr.h  functionattrhandler.h  hostinfoattrs.cpp  hostinfoattrs.h  seqnumberattr.cpp  seqnumberattr.h  sysinfoattrs.cpp  sysinfoattrs.h
src/qtlogger/filters/: categoryfilter.cpp  categoryfilter.h  duplicatefilter.cpp  duplicatefilter.h  functionfilter.h  levelfilter.h  regexpfilter.cpp  regexpfilter.h
src/qtlogger/formatters/: defaultformatter.h  functionformatter.h  jsonformatter.cpp  jsonformatter.h  nullformatter.h  patternformatter.cpp  patternformatter.h  prettyformatter.cpp  prettyformatter.h  qtlogmessageformatter.h  sentryformatter.cpp  sentryformatter.h
src/qtlogger/sinks/: androidlogsink.cpp  androidlogsink.h  coloredconsole.cpp  coloredconsole.h  filesink.cpp  filesink.h  httpsink.cpp  httpsink.h  iodevicesink.cpp  iodevicesink.h  ioslogsink.cpp  ioslogsink.h  journalsink.cpp  journalsink.h  oslogsink.cpp  oslogsink.h  platformstdsink.h  rotatingfilesink.cpp  rotatingfilesink.h  sdjournalsink.cpp  sdjournalsink.h  signalsink.cpp  signalsink.h  stderrsink.cpp  stderrsink.h  stdlogsink.h  stdoutsink.cpp  stdoutsink.h  syslogsink.cpp  syslogsink.h  windebugsink.cpp  windebugsink.h
tests/: CMakeLists.txt
tests/attrhandlers/: CMakeLists.txt  mock_qcoreapplication.h  mock_qhostinfo.h  test_appinfoattrs.cpp  test_appuuidattr.cpp  test_attrhandler_base.cpp  test_hostinfoattrs.cpp  test_seqnumberattr.cpp
tests/filters/: CMakeLists.txt  mock_helpers.h  test_categoryfilter.cpp  test_duplicatefilter.cpp  test_filters_integration.cpp  test_functionfilter.cpp  test_levelfilter.cpp  test_regexpfilter.cpp
tests/formatters/: CMakeLists.txt  mock_logmessage.h  test_formatters.cpp  test_formatters_mocks.cpp  test_patternformatter.cpp  test_sentryformatter.cpp
tests/logger/: CMakeLists.txt  mock_handler.h  mock_sink.h  test_logger.cpp
tests/logmessage/: CMakeLists.txt  mock_context.h  test_logmessage.cpp
tests/ownthreadhandler/: CMakeLists.txt  mock_handlers.h  test_ownthreadhandler.cpp
tests/pipeline/: CMakeLists.txt  mock_handler.h  test_pipeline.cpp
tests/qtlogger_header/: CMakeLists.txt  test_qtlogger_header.cpp
tests/rotatingfilesink/: CMakeLists.txt  test_rotatingfilesink.cpp
tests/simplepipeline/: CMakeLists.txt  mock_components.h  test_simplepipeline.cpp
tests/sortedpipeline/: CMakeLists.txt  mocks.h  test_sortedpipeline.cpp
tests/typedpipeline/: CMakeLists.txt  test_typedpipeline.cpp
tools/: bump_version.py  gen_qtlogger.h.py
