cmake_minimum_required(VERSION 3.16)

add_subdirectory(logmessage)
add_subdirectory(attrhandlers)
add_subdirectory(filters)
add_subdirectory(formatters)
add_subdirectory(pipeline)
add_subdirectory(sortedpipeline)
add_subdirectory(simplepipeline)
add_subdirectory(ownthreadhandler)
add_subdirectory(logger)
add_subdirectory(qtlogger_header)
add_subdirectory(rotatingfilesink)
